<!--
      ~     Popular Movies | The app allow users to discover the most popular movies playing
      ~     Copyright (C) <2016>  <Alaa Elias>
      ~
      ~     This program is free software: you can redistribute it and/or modify
      ~     it under the terms of the GNU General Public License as published by
      ~     the Free Software Foundation, either version 3 of the License, or
      ~     (at your option) any later version.
      ~
      ~     This program is distributed in the hope that it will be useful,
      ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
      ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      ~     GNU General Public License for more details.
      ~
      ~     You should have received a copy of the GNU General Public License
      ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
      -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MovieDetailsFragment">

    <TextView
        android:id="@+id/movie_detials_loading_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/movie_details_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:text="@string/please_wait_loading_image"
        android:textColor="@color/colorWhite"
        android:padding="5dp"
        android:textSize="10sp"
        android:layout_alignParentEnd="false"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/movie_details_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/movie_detials_loading_image"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/movie_detials_loading_image"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:maxHeight="250dp"
        android:minHeight="250dp"
        android:scaleType="centerCrop"
        android:layout_alignLeft="@+id/movie_detials_loading_image"
        android:layout_alignStart="@+id/movie_detials_loading_image"
        android:minWidth="250dp" />

    <ZoomButton
        android:id="@+id/movie_details_zoomin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/movie_details_image"
        android:layout_alignLeft="@+id/movie_detials_loading_image"
        android:layout_alignStart="@+id/movie_detials_loading_image"
        android:padding="10dp"
        android:src="@android:drawable/btn_plus" />

    <TextView
        android:id="@+id/movie_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/movie_details_image"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/movie_details_image"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        android:padding="7dp"
        android:text="@string/temp_movie_details_date"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="italic" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/movie_details_image"
        android:paddingBottom="20dp"
        android:padding="10dp"
        android:background="@color/colorPrimaryMed"
        android:layout_margin="10dp"
        android:paddingTop="20dp">

        <RatingBar
            android:id="@+id/movie_details_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/movie_details_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/temp_movie_details_rate"
            android:textSize="35sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/movie_details_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_details_rating_bar"
            android:text="@string/temp_movie_details_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:contextClickable="false" />

        <TextView
            android:id="@+id/movie_details_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_details_title"
            android:layout_marginTop="10dp"
            android:text="@string/temp_movie_details_description"
            android:background="@color/colorPrimaryLight"
            android:padding="5dp"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>

</RelativeLayout>

